# cgn-model

./: .gitattributes  .gitignore  AGENTS.md  DESIGN.md  Lancer_CGN_GUI.bat  README.md  TODO_DOCUMENTATION.md  demo_solver_dag.py  environment.yml  pyproject.toml
dev/: BRIEF_CADRAGE_MVP_WEB.md  CLIENT_MVP_PROPOSITION.md  CLIENT_MVP_VISUELS_OPTIONS.md  NOTE_CADRAGE_MVP_DETAILLEE.md  cgn_courses_croisieres.py  extract_route_cgn_tlm_osm.py  storage_dev.py  test_converter_variable_eta.py  test_visu_results.py  verif_coefs.py
dev/data/: length_TLM_OSM.csv
dev/docs/: forward_vs_inverse.md  notes_objectifs.md  plan_cgn_model_GPT_251128.md
dev/test_quasi_statique_vectoriel/: 251112_DAG.py
dev/test_quasi_statique_vectoriel/dev/: 251107_test_DAG.py  251110_test_with_input_DAG.py  DAG_networkx_generique_min_251106.py  inverse_static_min.yaml  inverse_static_min_251106.py  test_DAG_2.0_gpt.py  test_DAG_gpt_je_crois.py  test_DAG_mini.py
dev/test_quasi_statique_vectoriel/save/: 251107_test_DAG_save_fonctionne.py  251111_DAG_save_fonctionne.py  251112_DAG_save.py  251112_DAG_valid.py
dev/tests_architecture_config/: test_boucle-temporelle_251031.py  test_boucle-temporelle_251103.py  test_solveur_bilan_bus.py
dev/tests_architecture_config/config/: carburant_generique.yml  in_out.yml  systeme.yml  systeme_Italie.yml  systeme_Simplon.yml
dev/web_mvp/: README.md  app.py
dev/web_mvp/data/: config_type_DE.yaml  config_type_steam.yaml  config_vevey_croisiere.yaml  mvp.db  mvp_base_dev.db  mvp_template.db
dev/web_mvp/pages/: __init__.py  builder.py  library.py  simulation.py
dev/web_mvp/services/: __init__.py  db.py
dev/web_ui_v2/: app.py  app_save.py  components_basemodel.py  components_callbacks.py  components_layout.py  components_registry.py  idees_basemodel.py  proto_dash_pydantic_local.py
dev/web_ui_v2/data/: ui_v2.db
dev/web_ui_v2/models/: bricks.py  component_forms.py
dev/web_ui_v2/services/: assembler.py  simulation.py  storage.py
docs/: example_script.md  example_v1.md  forward_vs_inverse.md  gui_guide.md  index.md  model_workflow.md  navigation_guide.md  reference_modules_classes.md  script_guide.md  yaml_guide.md
docs/temp_doc/: lexique_modules_classes.md  points_amelioration_lisibilite_code.md  principes_conception_cgn_model.md  synthese_processus_choix_developpement.md
energy_solver/: __init__.py
energy_solver/components/: converters.py
examples/: demo_solver_dag.py
examples/cgn_copil_251212/: config_copil_251212.yaml  copil_251212_inputs_calcul.py  values_copil_251212.csv
examples/cgn_model_v1_251222/: config_v1.yaml  demo_v1.py  demo_v1_results.csv
examples/configurations_type_260106/: config_DE.yaml  config_H2.yaml  config_from_UI.yaml  config_full_elec.yaml  config_steam.yaml  tests_config_type.py
examples/configurations_type_260605/: README.md  config_DE.yaml  config_H2.yaml  config_full_elec.yaml  config_steam.yaml  run.py  tests_config_type.py
examples/demo_solver_dag_251128/: config_demo_solver_dag.yaml
examples/script_mode_260605/: README.md  config.yaml  results.csv  run.py  run_detailed.py
examples/solver_dag_mode_260605/: README.md  results.csv  run.py
src/cgn_model/: __init__.py
src/cgn_model/energy_solver/: __init__.py  config.py  converters.py  run_dag.py  solver_dag.py  types.py
src/cgn_model/navigation/: __init__.py  cruise_model.py
src/cgn_model/vessel_model/: __init__.py  adapters.py  base.py  config.py  energy_units.py  entities.py  profiles.py  results_utils.py  signals.py  storage.py  storages.py  utils.py  vessel.py
src/cgn_model/web_common/: __init__.py  local_db.py
src/cgn_model/web_mvp/: __init__.py  app.py
src/cgn_model/web_ui_v2/: __init__.py  app.py  callbacks.py  components_basemodel.py  (+7 more)
tests/: speed_vector_ms.csv  test_converter_variable_eta.py  test_croisieres.py  test_nav_select_aliases.py  test_run_global.py  test_vessel_inputs.py  test_vessel_solver_inputs_cal.py  test_visu_results.py
(+21 files in other folders)
