[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cgn-model"
version = "1.1.3"
description = "Energy DAG solver - Energy study CGN"
readme = "README.md"
requires-python = ">=3.13"

# Dépendances gérées par conda : on laisse vide ici
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["cgn_model*"]
exclude = ["tests*", "docs*", "examples*", "build*", "dist*"]

[tool.setuptools.package-data]
"cgn_model.navigation" = ["data/cgn_croisieres/*.csv"]

[project.urls]
Repository = "https://github.com/valentinpasche/cgn-model"

[project.scripts]
cgnmodel-mvp = "cgn_model.web_mvp.app:main"
cgnmodel-gui = "cgn_model.web_ui_v2.app:main"
