[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cgn-model"
version = "1.2"
description = "Energy DAG solver - Energy study CGN"
readme = "README.md"
requires-python = ">=3.13,<3.14"

# L'environnement de référence reste environment.yml.
# L'installation recommandée du projet utilise :
#
#   python -m pip install --no-deps .
#
# Les bornes ci-dessous permettent toutefois une installation directe avec
# "python -m pip install ." ou "python -m pip install -e ." lorsque Conda n'est
# pas disponible. Les planchers correspondent aux versions validées dans
# environment.yml ; les plafonds évitent les ruptures majeures probables.
dependencies = [
    "PyYAML>=6.0.3,<7",
    "pydantic>=2.12.5,<3",
    "numpy>=2.4.3,<3",
    "matplotlib>=3.10.8,<4",
    "pandas>=3.0.2,<4",
    "networkx>=3.6.1,<4",
    "dash>=3.4.0,<4",
    "plotly>=6.6.0,<7",
    "dash-extensions>=2.0.5,<3",
    "dash-pydantic-form>=0.18.3,<0.19",
    "dash-pydantic-utils>=0.18.3,<0.19",
    "dash-mantine-components>=2.6.1,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",
    "ruff>=0.15.11,<0.16",
    "black>=26.3.1,<27",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["cgn_model*"]
exclude = ["tests*", "docs*", "examples*", "build*", "dist*"]

[tool.setuptools.package-data]
"cgn_model.navigation" = ["data/cgn_croisieres/*.csv"]
"cgn_model.web_mvp" = ["assets/*.svg", "data/*.yaml", "data/*_template.db"]
"cgn_model.web_ui_v2" = ["data/*_template.db"]

[project.urls]
Repository = "https://github.com/valentinpasche/cgn-model"

[project.scripts]
cgnmodel-mvp = "cgn_model.web_mvp.app:main"
cgnmodel-gui = "cgn_model.web_ui_v2.app:main"
